# SoftView

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  SoftView  SoftView.c  SoftView.h  index.html  main.c  main.js  modifier.h  sz_string.h  terminal.ui
CLI/: CMakeLists.txt  main.c
GUI/: main.py
UIs/python/: main.py
UIs/terminal/: main.c
UIs/wasm/: libSoftView.html  libSoftView.js  script.js
UIs/wasm_test/: libSoftView.wasm  script.js
Web/: index.html
docs/: SoftView-Web.wasm  index.html
include/: SoftView.h
lib/: CMakeLists.txt  SoftView.c  lib.c  lib.h  objects.c  objects.h
scripts/: run_cli.sh  run_gui.sh  run_web
src/: canvas.c  canvas.h  helper.c  helper.h  lib.c  main.c  main.js
src/objects/: objects.h  rectangle.c  rectangle.h  square.c  square.h
