if (DEFINED EMSCRIPTEN)
    add_executable(SoftView-Web)
    target_sources(SoftView-Web PRIVATE lib.c objects.c)
    set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
    set_target_properties(SoftView-Web PROPERTIES COMPILE_FLAGS "-Os -s STANDALONE_WASM")
    set_target_properties(SoftView-Web PROPERTIES LINK_FLAGS    "-Os -s WASM=1 -s STANDALONE_WASM --no-entry")
else()
    add_library(SoftView-lib SHARED)
    target_sources(SoftView-lib PRIVATE lib.c objects.c)
    set_target_properties(SoftView-lib PROPERTIES SOV_LIB_EXPORT ON)
endif()
